EDSC-2592: Tweaking cwic note styles

--- a/static/src/js/components/GranuleResults/GranuleResultsHeader.scss
+++ b/static/src/js/components/GranuleResults/GranuleResultsHeader.scss
@@ -42,6 +42,7 @@
     display: block;
     margin-bottom: $spacer/2;
     color: $color__black--400;
+    font-size: 0.875rem;
   }
 
   &__cwic-emph {
