--- a/static/src/js/components/Panels/PanelGroup.scss
+++ b/static/src/js/components/Panels/PanelGroup.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 600px;
+  width: 100%;
   background-color: $color__white;
   transform: translateX(-100%);
   z-index: 0;
